Fix visibility bug in footer and update README.md

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,7 +108,7 @@ footer hr {
 }
 
 #footer-right {
-    visibility: hidden;
+    display: none;
 }
 
 #socials-footer {
